Knife cut fails at different scales (float precision) #42459

Closed
opened 2014-10-31 21:43:33 +01:00 by Erick Tukuniata · 18 comments

System Information
Operating system and graphics card
win 7 nvidia 550 ti
Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen) blender 2.72 625843d
Worked: (optional) I don't know

Short description of error
While using the knife cut i may be pressed some buttons by mistake and now the knife cut tools have a lot of red dot that follow my direction and when i cut anyway, i got triangles all over the place. Did i corrupt this file?

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

shoe_1.blend
In the .blend file hit k and LMB click and there you go ...


@ideasman42 (noting)
attaching another file from #42864 . Its related to scale (use knife project)
project_knf_2.blend

**System Information** Operating system and graphics card win 7 nvidia 550 ti **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) blender 2.72 625843d Worked: (optional) I don't know **Short description of error** While using the knife cut i may be pressed some buttons by mistake and now the knife cut tools have a lot of red dot that follow my direction and when i cut anyway, i got triangles all over the place. Did i corrupt this file? **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps [shoe_1.blend](https://archive.blender.org/developer/F120825/shoe_1.blend) In the .blend file hit k and LMB click and there you go ... ---- @ideasman42 (noting) attaching another file from #42864 . Its related to scale (use knife project) [project_knf_2.blend](https://archive.blender.org/developer/F131971/project_knf_2.blend)

Changed status to: 'Open'

Changed status to: 'Open'
Bastien Montagne was assigned by Erick Tukuniata 2014-10-31 21:43:33 +01:00

Added subscriber: @ErickNyanduKabongo

Added subscriber: @ErickNyanduKabongo

Added subscriber: @ideasman42

Added subscriber: @ideasman42

It looks like we could support this however - the object is ~0.005 dimensions, causing precision issues.

It looks like we could support this however - the object is ~0.005 dimensions, causing precision issues.

Thanks after reading this i scaled it and problem solved, I started this mode without ref. image and with just a vertex that why the scale was off.

Thanks after reading this i scaled it and problem solved, I started this mode without ref. image and with just a vertex that why the scale was off.
Bastien Montagne removed their assignment 2014-11-01 14:53:07 +01:00

Added subscriber: @mont29

Added subscriber: @mont29

@ErickNyanduKabongo please only assign bugs yourself if you are really sure you know to whom you should assign…

Campbell, not really sure we can do much about such issues currently… Esp. since it's again in ortho view (persp one seems to work OK here afaict), raycasting in ortho has always been kind of a nightmare. :/

@ErickNyanduKabongo please only assign bugs yourself if you are **really** sure you know to whom you should assign… Campbell, not really sure we can do much about such issues currently… Esp. since it's again in ortho view (persp one seems to work OK here afaict), raycasting in ortho has always been kind of a nightmare. :/

Sorry Mont29,
I was thinking that the modeling section is you and Campbell but eventually i m wrong. Tell me to whom to assign this kind of bug so that next time i can do it right.

Sorry Mont29, I was thinking that the modeling section is you and Campbell but eventually i m wrong. Tell me to whom to assign this kind of bug so that next time i can do it right.

Added subscriber: @Sergey

Added subscriber: @Sergey

@ideasman42, wouldn't really consider it a bug and will move to TODO. Murphy will always ensure you've got just one ore precision issue if you solve all known onces :)

@ideasman42, wouldn't really consider it a bug and will move to TODO. Murphy will always ensure you've got just one ore precision issue if you solve all known onces :)
Campbell Barton was assigned by Sergey Sharybin 2014-11-04 14:19:59 +01:00
Campbell Barton changed title from Knife cut strange behavior to Knife cut fails at different scales (float precision) 2014-12-16 10:31:00 +01:00
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Should be fixed by b77dd13004 (tested on my own).

Should be fixed by b77dd13004 (tested on my own).
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

Not so fast :)

While it can almost cut correctly, there is a precission problem where the knife cuts all the way through the ants-boots (occlude faces fails).

Not so fast :) While it can almost cut correctly, there is a precission problem where the knife cuts all the way through the *ants-boots* (occlude faces fails).

This issue was referenced by a97c5d1f9f

This issue was referenced by a97c5d1f9f7ec71807763c2f28f095bf37f0c230

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit a97c5d1f9f.

Closed by commit a97c5d1f9f.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42459
No description provided.