Fix T42459: Knife fails at small scale

Occluding geometry failed when near overlapping (or cutting small objects).