source/blender/bmesh/intern/bmesh_callback_generic.h
@@ -28,6 +28,7 @@
 bool BM_elem_cb_check_hflag_enabled(BMElem *, void *user_data);
 bool BM_elem_cb_check_hflag_disabled(BMElem *, void *user_data);
 bool BM_elem_cb_check_hflag_ex(BMElem *, void *user_data);
+bool BM_elem_cb_check_elem_not_equal(BMElem *ele, void *user_data);
 
 #define BM_elem_cb_check_hflag_ex_simple(type, hflag_p, hflag_n) \
 	(bool (*)(type, void *))BM_elem_cb_check_hflag_ex, \
